src/parser/snapshots/expr/bitwise/bitwise_shift_or.snap
---
source: src/parser/parser.rs
description: bitwise operator expressions with correct precedence
expression: actual.unwrap()
info: 1 << 2 | 3
---
location:
  line: 1
  column: 1
kind:
  binary:
    - bitwise_or
    - location:
        line: 1
        column: 1
      kind:
        binary:
          - left_shift
          - location:
              line: 1
              column: 1
            kind:
              int_constant:
                - "1"
                - decimal
          - location:
              line: 1
              column: 6
            kind:
              int_constant:
                - "2"
                - decimal
    - location:
        line: 1
        column: 10
      kind:
        int_constant:
          - "3"
          - decimal
