src/parser/snapshots/expr/bitwise/bitwise_xor_and_parens_rhs.snap
---
source: src/parser/parser.rs
description: bitwise operator expressions with correct precedence
expression: actual.unwrap()
info: 1 ^ (2 & 3)
---
location:
  line: 1
  column: 1
kind:
  binary:
    - bitwise_xor
    - location:
        line: 1
        column: 1
      kind:
        int_constant:
          - "1"
          - decimal
    - location:
        line: 1
        column: 6
      kind:
        binary:
          - bitwise_and
          - location:
              line: 1
              column: 6
            kind:
              int_constant:
                - "2"
                - decimal
          - location:
              line: 1
              column: 10
            kind:
              int_constant:
                - "3"
                - decimal
